--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -5,7 +6,10 @@
   </head>
   <body>
     <div id="root"></div>
-
+    <!-- <script
+      src="https://open.spotify.com/embed-podcast/iframe-api/v1"
+      async
+    ></script> -->
     <script src="build/bundle.js"></script>
   </body>
 </html>
