add router suppot, new ui

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
       src="https://open.spotify.com/embed-podcast/iframe-api/v1"
       async
     ></script> -->
+    <canvas> 
     <script src="build/bundle.js"></script>
   </body>
 </html>
