--- a/client/login.html
+++ b/client/login.html
@@ -5,7 +5,7 @@
     <title>Octave Login</title>
   </head>
   <body>
-    <form action="/client/index.html">
+    <form action="/login">
       <input type="submit" value="Login with Spotify" />
     </form>
   </body>
