--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Octave</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
     <div id="root"></div> 
